# generate_cqrs_api_macros

./: .gitignore  Cargo.toml  readme.md
generate_cqrs_api_macro_impl/: Cargo.toml
generate_cqrs_api_macro_impl/src/: generate_api_macro_impl.rs  generating.rs  parsing.rs
generate_cqrs_api_macro_impl/src/generating/: generate_cqrs_impl.rs  generate_effect_enum.rs  generate_effects_enum.rs  generate_error_enum.rs  generate_errors_enum.rs  traits.rs
generate_cqrs_api_macro_impl/src/generating/traits/: api_traits.rs  cqrs_traits.rs
generate_cqrs_api_macro_impl/src/parsing/: extract_type.rs  file_location_2_base_path.rs  get_enum.rs  get_struct_by_trait.rs  get_use_statements.rs  read_rust_files.rs
generate_cqrs_api_macros_impl/: Cargo.toml
generate_cqrs_api_macros_impl/src/: generate_api_macro_impl.rs  generating.rs  lib.rs  parsing.rs  utils.rs
generate_cqrs_api_macros_impl/src/generating/: generate_cqrs_impl.rs  generate_error_enum.rs  generate_use_statement.rs
generate_cqrs_api_macros_impl/src/generating/traits/: api_traits.rs  cqrs_traits.rs
generate_cqrs_api_macros_impl/src/parsing/: file_location_2_base_path.rs  get_domain_model_struct.rs  get_struct_by_trait.rs  read_rust_files.rs
generate_cqrs_api_macros_impl/src/utils/: file_location_2_base_path.rs  generate_cqrs_impl.rs  generate_effect_enum.rs  generate_error_enum.rs  generate_use_statement.rs  get_domain_model_struct.rs  get_domain_model_struct_name.rs  get_enum.rs  read_rust_files.rs  type_2_ident.rs
src/: generate_api_macro_impl.rs  lib.rs  utils.rs
tests/: compile_test_runner.rs  (+1 more)
(+15 files in other folders)
