[workspace]
members = [".", "generate_cqrs_api_macros_impl"]

[package]
name = "generate_cqrs_api_macros"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
proc-macro = true

[dependencies]
generate_cqrs_api_macros_impl = {path = "generate_cqrs_api_macros_impl"}
proc-macro2 = "1.0.88"
log = "0.4.22"
simple_logger = "5.0.0"

[dev-dependencies]
thiserror = "^2.0.3"
