[package]
name = "generate_cqrs_api_macro_impl"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
log = "0.4.22"
simple_logger = "5.0.0"
proc-macro2 = "1.0.88"
# extra-traits feature adds #[derive(Debug)], but slows down the compilation time
# so, only enable this while debugging!
# syn = {version = "2.0.79", features = ["full", "extra-traits"]}
syn = {version = "2.0.79", features = ["full"]}
quote = "1.0.37"
stringcase = "0.3.0"

[dev-dependencies]
thiserror = "^2.0.3"
