[package]
name = "generate_cqrs_api_macros_impl"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
log = "0.4.22"
simple_logger = "5.0.0"
proc-macro2 = "1.0.88"
syn = {version = "2.0.79", features = ["full"]}
quote = "1.0.37"
# prettyplease = "0.2.25"

[dev-dependencies]
thiserror = "^1.0.51"
